--- a/default.html
+++ b/default.html
@@ -1,23 +1,29 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-  <title>Justin's Website</title>
-<meta name="author" content="Justin Liu">
+    <title>Justin's Website</title>
+    <meta name="author" content="Justin Liu">
 </head>
 
 <script>
-alert("Why are you here?")
+    alert("Why are you here?")
 </script>
 //hello
+
 <body>
-<h1>Website of Justin  Liu!!!!</h1>
-<h2>Hello</h2>
-<h2>Hello again</h2>
-<h3>Please read</h3>
-<p>Ryan</p>
-<p>Fei</p>
-<p>Austen</p>
-<p>Justin</p>
+    <h1>Website of Justin Liu!!!!</h1>
+    <h2>Hello</h2>
+    <h2>Hello again</h2>
+    <h3>Please read</h3>
+    <p>Ryan</p>
+    <p>Fei</p>
+    <p>Austen <span>span</span></p>
+    <p>Justin
+        <div>div</div>
+    </p>
+
+
 </body>
 
 
