--- a/default.html
+++ b/default.html
@@ -18,8 +18,19 @@
     <h3>Please read</h3>
     <p>Ryan</p>
     <p>Fei</p>
-    <p>Austen <span>span</span></p>
-    <p>Justin
+
+    <p>Austen //
+        <span style="display: block; width: 50px; color: red;background-color: aqua;">span span2</span> //
+
+
+
+
+
+
+        <span>in new line  <br/> because of br</span> <br/>
+
+    </p>
+    <p>Justin //
         <div>div</div>
     </p>
 
