--- a/default.html
+++ b/default.html
@@ -14,13 +14,15 @@
 <body>
     <h1>Website of Justin Liu!!!!</h1>
     <h2>Hello</h2>
+    Hi
+    <p>Test</p>
     <h2>Hello again</h2>
     <h3>Please read</h3>
     <p>Ryan</p>
     <p>Fei</p>
 
-    <p>Austen //
-        <span style="display: block; width: 50px; color: red;background-color: aqua;">span span2</span> //
+    <p>Austen
+        <span style="display: block; width: 50px; color: red;background-color: aqua;">span span2</span>
 
 
 
@@ -30,7 +32,7 @@
         <span>in new line  <br/> because of br</span> <br/>
 
     </p>
-    <p>Justin //
+    <p>Justin
         <div>div</div>
     </p>
 
