--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Father's Day Album</title>
+    <title>Christmas Day Album</title>
     <link rel="stylesheet" href="Alum.css" />
 </head>
 
+<script>
+    window.scrollTo(0, document.body.scrollHeight);
+</script>
 
 <body>
     <h1 id="Header1"><i>A Life of Memories</i></h1>
-    <p>A short photo album, dedicated to Ryan Liu</p>
-    <img id="image1" src="https://drive.google.com/file/d/0B7teuD4p0RgneDNmb0JtZzNKd2M/view?resourcekey=0-dMbeGfIC31aOSYDeguiUEA"> H
-</body>
+    <p>A short photo album, dedicated to Billy B. Johnson</p>
+    <img id="image1" src=< /body>
 
 </html>
