--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Day Album</title>
     <link rel="stylesheet" href="Alum.css" />
+    <script defer src="Alum.js">
+    </script>
 </head>
 
-<script>
-    window.scrollTo(0, document.body.scrollHeight);
-</script>
+
 
 <body>
     <h1 id="Header1"><i>A Life of Memories</i></h1>
