--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Day Album</title>
     <link rel="stylesheet" href="Alum.css" />
-    <script defer src="Alum.js">
+    <script src="Alum.js" defer>
     </script>
 </head>
 
