--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -250,7 +250,8 @@
         short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA
         short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA
         shoshort photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B. JohnsonA short photo album, dedicated to Billy B.
-        Johnson</p>
+        Johnson
+    </p>
     <img id="image1" src=< /body>
 
 </html>
