--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -16,7 +16,7 @@
 <body>
     <h1 id="Header1"><i>A Life of Memories</i></h1>
     <p>
-        A short collection of photos, dedicated to Ryan Liu in honor of Father's Day<br/> All, please enjoy.
+        &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A short collection of photos, dedicated to Ryan Liu in honor of Father's Day<br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All, please enjoy.
     </p>
     <i><b>Note: Please press enter to start the presentation, or to pause</b></i>
 </body>
