--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -27,7 +27,7 @@
         please enjoy.
     </p>
 
-    <audio loop src="file:///C:/gitHub/web1/imgs/Girl%20on%20fire.mp3" type="audio/mpeg">
+    <audio id="audio" loop src="file:///C:/gitHub/web1/imgs/Girl%20on%20fire.mp3" type="audio/mpeg">
     </audio>
 
     <i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Please press enter to start the presentation, or to pause</b></i>
