--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -32,8 +32,9 @@
 
     <i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Please press enter to start the presentation, or to pause</b></i>
 
-    <img src="file:///C:/gitHub/web1/imgs/Image-32.jpg">
-
+    <div id="image1">
+        <img src="file:///C:/gitHub/web1/imgs/Image-32.jpg">
+    </div>
 </body>
 
 </html>
