--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <html>
 
+<body style="background-color:rgba(82, 110, 113, 0.079);"></body>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
