--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -36,7 +36,7 @@
     <i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Please press enter to start the presentation, or to pause</b></i>
 
     <div id="imageset">
-        <img src="file:///C:/gitHub/web1/imgs/Image-32.jpg">
+        <img src="file:///C:/gitHub/web1/imgs/Image-32.jpg" width: 500px>
     </div>
 </body>
 
