--- a/Alum/Alum.html
+++ b/Alum/Alum.html
@@ -56,17 +56,39 @@
         <img src="file:///C:/gitHub/web1/imgs/Screenshot%202022-06-18%20202933.png" width="499">
 
         <img src="file:///C:/Users/LiuJu/Downloads/20220610_170153.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20150509_155550.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/20150509_161042.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20150516_170059.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20150517_130532.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/20160720_220028.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20170520_193823.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20170810_144519.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/20190411_193259.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20220407_194428.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20220410_133708.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/20220607_200125.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20220610_155106.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/20220610_155229.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/20220610_165615.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/IMG_20220214_150555.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/IMG_20220116_150538.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1640466366385.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1633578796017.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1626839583317.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1622495037318.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1550988619551.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1432304806859%20(1).jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1432304807063.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/mmexport1432304806584.jpg" width="499">
+        <img src="file:///C:/Users/LiuJu/Downloads/fei_yanSit.jpg" width="450">
+        <img src="file:///C:/Users/LiuJu/Downloads/Parents44.jpg" width="450">
         <img src="" width="499">
+        <img src="" width="450">
+        <img src="" width="450">
         <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
-        <img src="" width="499">
+        <img src="" width="450">
+        <img src="" width="450">
+
     </div>
 </body>
 
